--- a/custom_components/GoveeBleLights/manifest.json
+++ b/custom_components/GoveeBleLights/manifest.json
@@ -12,8 +12,8 @@
     ],
     "codeowners": ["@AznDibs"],
     "requirements": ["bleak-retry-connector"],
-    "dependencies": ["bluetooth"],
+    "dependencies": ["bluetooth", "bluetooth_adapters"],
     "config_flow": true,
-    "iot_class": "local_polling",
+    "iot_class": "local_push",
     "version": "0.1.1"
 }
